--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,13 @@
         .maincontainer {
             display: flex;
             flex-direction: row;
+            
             height: 100%;
             align-content: space-around;
             align-items: center;
+            
             padding: 50px;
-            padding-top: 150px;
+            padding-top: 50px;
         }
 
         .content {
@@ -31,7 +33,21 @@
             /* background-color: #444444; */
             
             border-radius: 20px;
-            height: 300px;
+            height: 320px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+        }
+
+        .content_register {
+            margin: 0 auto;
+            width: 400px;
+            background: linear-gradient(180deg, #444444 0%, #787878 100%);
+            /* background-color: #444444; */
+            
+            border-radius: 20px;
+            height: 500px;
             display: flex;
             flex-direction: column;
             align-content: center;
@@ -59,6 +75,12 @@
             height: 80px;
         }
 
+        .inputcontainer_register {
+            display: flex;
+            flex-direction: row;
+            height: 280px;
+        }
+
         .anothercontainer {
             display: flex;
             flex-direction: column;
@@ -69,7 +91,7 @@
         .anothercontainer2 {
             display: flex;
             flex-direction: column;
-            padding-top: 5px;
+            padding-top: 4px;
             padding-right: 2px;
             align-content: space-between;
             align-items: flex-end;
@@ -105,9 +127,30 @@
             border-radius: 10px;
         }
 
-        .inside {
+        input[type=tel] {
             padding-top: 4px;
             padding-bottom: 4px;
+            border-radius: 10px;
+        }
+
+        input[type=date] {
+            padding-top: 4px;
+            padding-bottom: 4px;
+            border-radius: 10px;
+        }
+
+        select {
+            padding-top: 4px;
+            padding-bottom: 4px;
+            border-radius: 10px;
+        }
+
+        .inside {
+            margin-top: auto;
+            margin-bottom: auto;
+            padding-top: 4px;
+            padding-bottom: 4px;
+            height: 25px;
             border-radius: 10px;
         }
 
