--- a/templates/index.html
+++ b/templates/index.html
@@ -44,13 +44,17 @@
                                 <input type="text" name="email" id="email"><br>
 
                             </div>
-                            <input type="password" name="password" id="password"><br>
+                            <div class="inside">
+                                <input type="password" name="password" id="password"><br>
+
+                            </div>
 
                         </div>
     
                     </div>
                     
                 </div>
+                <p style="margin: 1px; color: maroon; text-align: center;">{{error}}</p>
                 <input type="submit" value="Login">
             </form>
             <a href="/register">or create a new account</a>
