--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,34 @@
             align-items: center;
         }
 
+        .content_register_product_input {
+            margin: 0 auto;
+            width: 400px;
+            background: linear-gradient(180deg, #444444 0%, #787878 100%);
+            /* background-color: #444444; */
+            
+            border-radius: 20px;
+            height: 300px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+        }
+
+        .content_donor {
+            margin: 0 auto;
+            width: 400px;
+            background: linear-gradient(180deg, #444444 0%, #787878 100%);
+            /* background-color: #444444; */
+            
+            border-radius: 20px;
+            height: 500px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+        }
+
         .logoHeader {
             margin: 0 auto;
             /* width: 100%; */
@@ -178,6 +206,40 @@
             flex-direction: column;
             align-content: center;
             align-items: center;
+        }
+        .navbar {
+            overflow: hidden;
+            background-color: #333;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+/* Links inside the navbar */
+        .navbar a {
+            float: right;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        .img {
+            float:left;
+        }
+
+        .navbar text {
+            float: left;
+            font-size: 20px;
+            color: red;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+
+/* Add a red background color to navbar links on hover */
+        .navbar a:hover, .dropdown:hover .dropbtn {
+            background-color: red;
         }
 
         #content {
