--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,8 @@
             padding-top: 50px;
         }
 
+
+
         .content {
             margin: 0 auto;
             width: 400px;
@@ -76,6 +78,20 @@
             
             border-radius: 20px;
             height: 500px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+        }
+
+        .content_recepient {
+            margin: 0 auto;
+            width: 400px;
+            background: linear-gradient(180deg, #444444 0%, #787878 100%);
+            /* background-color: #444444; */
+            
+            border-radius: 20px;
+            height: 300px;
             display: flex;
             flex-direction: column;
             align-content: center;
