--- a/templates/recipient.html
+++ b/templates/recipient.html
@@ -24,7 +24,7 @@
     </div>
 
     
-    <div class="content">
+    <div class="content_recepient">
         <h1 style="text-align: center">Find a Blood Donor</h1>
         <div class="form">
             <form action="/" method="POST">
@@ -37,33 +37,69 @@
 
                             </div>
                             <div class="inside">
-                                <label for="Blood Group">Blood Group:   </label><br>
+                                <label for="password">Category:   </label><br>
 
                             </div>
+
+
+                            <div class="inside">
+                                <label for="blood_type">Blood Type: </label><br>
+
+                            </div>
+                            
                         </div>
                     </div>
                     <div class="labelstyle">
                         <div class="anothercontainer">
+                           
                             <div class="inside">
-                                <input type="text" name="location" id="location"><br>
+                                <select id="Category" name="Category" style="width: 175px;">
+                                    <option value="Karachi">Karachi</option>
+                                    <option value="Lahore">Lahore</option>
+                                    <option value="Islamabad">Islamabad</option>
+                                    <option value="Multan">Multan</option>
+                                    <option value="Queta">Queta</option>
+                                    <option value="Peshawar">Peshawar</option>
+                                </select>
+
+                            </div>
+
+                            <div class="inside">
+                                <select id="Category" name="Category" style="width: 175px;">
+                                    <option value="Blood">Blood</option>
+                                    <option value="Plasma">Plasma</option>
+                                    <option value="Plasma">RBC</option>
+                                    <option value="Plasma">WBC</option>
+                                    <option value="Plasma">Platelets</option>
+                                    <option value="other">Other</option>
+                                </select>
 
                             </div>
                             <div class="inside">
-                                <input type="text" name="bloodgroup" id="bloodgroup"><br>
+                                <select id="blood_type" name="blood_type" style="width: 175px;">
+                                    <option value="A+">A+</option>
+                                    <option value="A-">A-</option>
+                                    <option value="B+">B+</option>
+                                    <option value="B-">B-</option>
+                                    <option value="AB+">AB+</option>
+                                    <option value="AB-">AB-</option>
+                                    <option value="O+">O+</option>
+                                    <option value="O-">O-</option>
+                                </select>
 
                             </div>
+
+
 
                         </div>
-    
+
                     </div>
                     
                 </div>
+                <br><br>
                 <p style="margin: 1px; color: maroon; text-align: center;">{{error}}</p>
-                <input type="submit" value="Search">
-            </form>
-            <a href="/new_request">or make a new request</a>
+                <input type="submit" value="Submit Request">
 
-            
         </div>
     </div>
 
