--- a/templates/base.html
+++ b/templates/base.html
@@ -252,6 +252,17 @@
             text-decoration: none;
         }
 
+        .container2 {
+            
+            
+            height: 100%;
+            align-content: space-around;
+            align-items: center;
+            
+            padding: 50px;
+            padding-top: 50px;
+        }
+
 
 /* Add a red background color to navbar links on hover */
         .navbar a:hover, .dropdown:hover .dropbtn {
