--- a/templates/donors_admin.html
+++ b/templates/donors_admin.html
@@ -6,39 +6,37 @@
 
 {% block body %}
 <div class="maincontainer">
-    <div class='logoHeader'>
-        <div class="logo">
-            <img src="/static/im12.png" width="500px" height="400px">
-        </div>
-        <h1 style="text-align: center">BloodMate:<br>Admin Portal</h1>
-        
-    </div>
-    <div class="content">
-
-        <br><br><br><br>
-
-
-        <form action="/bloodproduct">
-            <input type="submit" value="View Donor accounts" />
-        </form>
-
-
-
-        <div class="form">
-            <form action="/" method="POST">
-    
-                <p style="margin: 1px; color: maroon; text-align: center;">{{error}}</p>
-                <input type="submit" value="Remove Donor accounts">
-                
-        </div>
-   
-
-    </form>
- 
-        
-
-
-    </div>
+    <table>
+        <tr>
+            <th>
+                ID
+            </th>
+            <th>
+                Name
+            </th>
+            <th>
+                Email
+            </th>
+            <th>
+                Added
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
+        {% for donor in donors %}
+            <tr>
+                <td>{{ donor.id }}</td>
+                <td>{{ donor.name }}</td>
+                <td>{{ donor.email_id }}</td>
+                <td>{{ donor.new_date_created.date() }}</td>
+                <td>
+                    <a href='/deletedonor/{{donor.id}}'>Delete Donor</a>
+                    <br>
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
     
 </div>
 {% endblock %}
