--- a/templates/admin.html
+++ b/templates/admin.html
@@ -39,6 +39,10 @@
             <input type="submit" value="Recipients" />
         </form>
 
+        <form action="/recipients_requests">
+            <input type="submit" value="View Recipients Recipients" />
+        </form>
+
         <form action="/testcenters_admin">
             <input type="submit" value="Test centers" />
         </form>
@@ -56,7 +60,7 @@
 
     </form>
     
-    <a href="/register">logout</a>
+   
     <a href="/register">Change account information</a>
 
 
