--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,19 @@
             align-content: center;
             align-items: center;
         }
+        .content_sd {
+            margin: 0 auto;
+            width: 400px;
+            background: linear-gradient(180deg, #444444 0%, #787878 100%);
+            /* background-color: #444444; */
+            
+            border-radius: 20px;
+            height: 400px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+        }
 
         .content_register {
             margin: 0 auto;
@@ -91,12 +104,27 @@
             /* background-color: #444444; */
             
             border-radius: 20px;
-            height: 300px;
+            height: 350px;
             display: flex;
             flex-direction: column;
             align-content: center;
             align-items: center;
         }
+        .content_req {
+            margin: 0 auto;
+            margin-top: 50px;
+            width: 420px;
+            background: linear-gradient(180deg, #444444 0%, #787878 100%);
+            /* background-color: #444444; */
+            
+            border-radius: 20px;
+            height: 370px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+        }
+        
 
         .logoHeader {
             margin: 0 auto;
