--- a/templates/recipient.html
+++ b/templates/recipient.html
@@ -27,17 +27,17 @@
     <div class="content_recepient">
         <h1 style="text-align: center">Find a Blood Donor</h1>
         <div class="form">
-            <form action="/" method="POST">
+            <form action="{{ '/search_donor' }}" method="POST">
 
                 <div class="inputcontainer">
                     <div class="labelstyle">
                         <div class="anothercontainer2">
                             <div class="inside">
-                                <label for="Location">Location:   </label><br>
+                                <label for="location">Location:   </label><br>
 
                             </div>
                             <div class="inside">
-                                <label for="password">Category:   </label><br>
+                                <label for="Category">Category:   </label><br>
 
                             </div>
 
@@ -53,7 +53,7 @@
                         <div class="anothercontainer">
                            
                             <div class="inside">
-                                <select id="Category" name="Category" style="width: 175px;">
+                                <select id="location" name="location" style="width: 175px;">
                                     <option value="Karachi">Karachi</option>
                                     <option value="Lahore">Lahore</option>
                                     <option value="Islamabad">Islamabad</option>
@@ -98,12 +98,15 @@
                 </div>
                 <br><br>
                 <p style="margin: 1px; color: maroon; text-align: center;">{{error}}</p>
-                <input type="submit" value="Submit Request">
+                <input type="submit" value="Submit ">
 
+            </form>
+            
         </div>
+        <a href="/make_request_recipient">or Make a Donation Request NOW</a>
     </div>
-
     
-
+   
+    
 </div>
 {% endblock %}
