--- a/templates/recipients_admin.html
+++ b/templates/recipients_admin.html
@@ -1,52 +1,50 @@
 {% extends 'base.html' %}
 
 {% block head %}
-
+<h1>Hello Admin! You are currently viewing all the recipient</h1>
 {% endblock %}
 
 {% block body %}
 <div class="maincontainer">
-    <div class='logoHeader'>
-        <div class="logo">
-            <img src="/static/im12.png" width="500px" height="400px">
-        </div>
-        <h1 style="text-align: center">BloodMate:<br>Admin Portal</h1>
-        
-    </div>
-    <div class="content">
-
-        <br><br><br><br>
-
-
-        <form action="/bloodproduct">
-            <input type="submit" value="View Recipient accounts" />
-        </form>
-
-
-
-        <div class="form">
-            <form action="/" method="POST">
-    
-                <p style="margin: 1px; color: maroon; text-align: center;">{{error}}</p>
-                <input type="submit" value="Remove Recipient accounts">
-                
-        </div>
-   
-
-        <div class="form">
-            <form action="/" method="POST">
-    
-                <p style="margin: 1px; color: maroon; text-align: center;">{{error}}</p>
-                <input type="submit" value="Manage recipient requests">
-                
-        </div>
-
-    </form>
- 
-        
-
-
-    </div>
+    <table>
+        <tr>
+            <th>
+                ID
+            </th>
+            <th>
+                Name
+            </th>
+            <th>
+                Email
+            </th>
+            <th>
+                Phone Number
+            </th>
+            <th>
+                Blood Type
+            </th>
+            <th>
+                Added
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
+        {% for rec in recipients %}
+            <tr>
+                <td>{{ rec.id }}</td>
+                <td>{{ rec.name }}</td>
+                <td>{{ rec.email_id }}</td>
+                <td>{{ rec.phone_number }}</td>
+                <td>{{ rec.blood_type }}</td>
+                <td>{{ rec.rec_date_created.date() }}</td>
+                <td>
+                    <a href='/deleterecipient/{{rec.id}}'>Delete Donor</a>
+                    <br>
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
     
 </div>
 {% endblock %}
