--- a/templates/admin.html
+++ b/templates/admin.html
@@ -22,7 +22,7 @@
         <h1 style="text-align: center">BloodMate:<br>Admin Portal</h1>
         
     </div>
-    <div class="content">
+    <div class="content_adm">
 
         
         <br><br>
