--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,19 @@
             align-content: center;
             align-items: center;
         }
+        .content_adm {
+            margin: 0 auto;
+            width: 400px;
+            background: linear-gradient(180deg, #444444 0%, #787878 100%);
+            /* background-color: #444444; */
+            
+            border-radius: 20px;
+            height: 380px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+        }
         .content_sd {
             margin: 0 auto;
             width: 400px;
