--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,6 +8,8 @@
 <div class="navbar">
     
     <a href="/">Logout</a>
+    <a href="/change_info_admin/{{id}}">Change Info</a>
+
     
     <img src="/static/im12.png" width="50px" height="50px">
 
