--- a/templates/base.html
+++ b/templates/base.html
@@ -166,6 +166,27 @@
             height: 280px;
         }
 
+        .content_update_info {
+            margin: 0 auto;
+            width: 400px;
+            background: linear-gradient(180deg, #444444 0%, #787878 100%);
+            /* background-color: #444444; */
+            
+            border-radius: 20px;
+            height: 350px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+        }
+
+
+        .inputcontainer_update_info {
+            display: flex;
+            flex-direction: row;
+            height: 180px;
+        }
+
         .anothercontainer {
             display: flex;
             flex-direction: column;
