--- a/templates/donor.html
+++ b/templates/donor.html
@@ -8,6 +8,7 @@
 <div class="navbar">
     
     <a href="/">Logout</a>
+    <a href="/change_info_donor/{{id}}">Change Info</a>
     
     <img src="/static/im12.png" width="50px" height="50px">
 
