Added Dummy data plus leftover use cases

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -42,7 +42,7 @@
         </form>
 
         <form action="/recipients_requests">
-            <input type="submit" value="View Recipients Recipients" />
+            <input type="submit" value="View Recipients Requests" />
         </form>
 
         <form action="/testcenters_admin">
@@ -62,8 +62,6 @@
 
     </form>
     
-   
-    <a href="/register">Change account information</a>
 
 
         
