--- a/templates/change_info_donor.html
+++ b/templates/change_info_donor.html
@@ -72,6 +72,12 @@
                     </div>
                     
                 </div>
+                <form action="/" method="POST">
+                    <h4 >Change request status:</h4>
+                    <input type="radio" id="Active" name="sd" value="Active">
+                    <label for="active">Active</label>
+                    <input type="radio" id="Inactive" name="sd" value="Inactive">
+                    <label for="inactive">Inactive</label><br><br>
                 <p style="margin: 1px; color: maroon; text-align: center;">{{error}}</p>
                 <input type="submit" value="Update">
             </form>
