--- a/templates/donor_search_hospital.html
+++ b/templates/donor_search_hospital.html
@@ -23,8 +23,8 @@
         
     </div>
     
-    <div class="content_donor">
-        <h1 style="text-align: center">Search Recipient Requests</h1>
+    <div class="content_donorsearchhosp">
+        <h1 style="text-align: center">Search Hospitals</h1>
         <div class="form">
             <form action="{{ '/donor_search_hospital' }}" method="POST">
 
@@ -59,7 +59,7 @@
                     </div>
 
                 </div>
-                <p style="margin: 1px; color: maroon; text-align: center;">{{error}}</p>
+                <p style="margin: -200px; color: maroon; text-align: center;">{{error}}</p>
                 <input type="submit" value="Search">
          
             </form>
