--- a/templates/donors_admin.html
+++ b/templates/donors_admin.html
@@ -24,6 +24,9 @@
                 Blood Type
             </th>
             <th>
+                Status
+            </th>
+            <th>
                 Location
             </th>
             <th>
@@ -40,6 +43,7 @@
                 <td>{{ donor.email_id }}</td>
                 <td>{{ donor.phone_number }}</td>
                 <td>{{ donor.blood_type }}</td>
+                <td>{{ donor.status }}</td>
                 <td>{{ donor.city }}</td>
                 <td>{{ donor.new_date_created.date() }}</td>
                 <td>
