--- a/templates/make_request_recipient.html
+++ b/templates/make_request_recipient.html
@@ -10,7 +10,7 @@
     <div class="content_req">
         <h1 style="text-align: center; padding-top: 12px; ">Make a Donation Request</h1>
         <div class="form">
-            <form action="/make_request_recipient" method='POST'>
+            <form action="/make_request_recipient/{{id}}" method='POST'>
     
                 <div class="inputcontainer">
                     <div class="labelstyle">
