--- a/templates/recipient.html
+++ b/templates/recipient.html
@@ -9,7 +9,7 @@
     
     <a href="/">Logout</a>
     <a href="/change_info_recipient/{{id}}">Change Info</a>
-    
+    <a href="/recipient_request_status/{{id}}">Request Status</a>
     <img src="/static/im12.png" width="50px" height="50px">
 
     <text>BloodMate</text>
@@ -104,7 +104,7 @@
             </form>
             
         </div>
-        <a href="/make_request_recipient">or Make a Donation Request NOW</a>
+        <a href="/make_request_recipient/{{id}}">or Make a Donation Request NOW</a>
     </div>
     
    
