--- a/templates/base.html
+++ b/templates/base.html
@@ -109,6 +109,19 @@
             align-content: center;
             align-items: center;
         }
+        .content_donorsearchhosp {
+            margin: 0 auto;
+            width: 400px;
+            background: linear-gradient(180deg, #444444 0%, #787878 100%);
+            /* background-color: #444444; */
+            
+            border-radius: 20px;
+            height: 300px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+        }
 
         .content_recepient {
             margin: 0 auto;
@@ -173,7 +186,21 @@
             /* background-color: #444444; */
             
             border-radius: 20px;
-            height: 350px;
+            height: 475px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+        }
+
+        .content_req_status{
+            margin: 0 auto;
+            width: 400px;
+            background: linear-gradient(180deg, #444444 0%, #787878 100%);
+            /* background-color: #444444; */
+            
+            border-radius: 20px;
+            height: 200px;
             display: flex;
             flex-direction: column;
             align-content: center;
