--- a/templates/screening_admin.html
+++ b/templates/screening_admin.html
@@ -1,28 +1,48 @@
 {% extends 'base.html' %}
 
 {% block head %}
-
+<h1>Hello Admin! You are currently viewing all the Screening Appointments</h1>
 {% endblock %}
 
 {% block body %}
 <div class="maincontainer">
-    <div class='logoHeader'>
-        <div class="logo">
-            <img src="/static/im12.png" width="500px" height="400px">
-        </div>
-        <h1 style="text-align: center">BloodMate:<br>Admin Portal</h1>
-        
-    </div>
-    <div class="content">
+    <table>
+        <tr>
+            <th>
+                Appointment ID
+            </th>
+            <th>
+                Appointment Time
+            </th>
+            <!-- <th>
+                Appointment Date
+            </th> -->
+            <th>
+                Test Center ID
+            </th>
+            <th>
+                Donor ID
+            </th>
+            <th>
+                Add Screening Results
+            </th>
+        </tr>
 
-        <br><br><br><br>
-
-
-        <form action="/bloodproduct">
-            <input type="submit" value="Suc" />
-        </form>
-
-
+        {% for apps in sc_apps %}
+            <tr>
+                <td>{{ apps.id }}</td>
+                <td>{{ apps.appointment_time }}</td>
+                <!-- <td>{{ apps.appointment_date }}</td> -->
+                <td>{{ apps.test_center_id }}</td>
+                <td>{{ apps.donor_id }}</td>
+                <td>
+                    <a href='/perform_screening/{{apps.id}}/{{apps.donor_id}}'>Disapprove</a>
+                    <br>
+                    <a href='/approve_screening/{{apps.id}}/{{apps.donor_id}}'>Approve</a>
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
     
 </div>
 {% endblock %}
