--- a/templates/change_info_donor.html
+++ b/templates/change_info_donor.html
@@ -73,7 +73,7 @@
                     
                 </div>
                 <form action="/" method="POST">
-                    <h4 >Change request status:</h4>
+                    <h4 >Change donation status:</h4>
                     <input type="radio" id="Active" name="sd" value="Active">
                     <label for="active">Active</label>
                     <input type="radio" id="Inactive" name="sd" value="Inactive">
