--- a/templates/donor_search_hospital.html
+++ b/templates/donor_search_hospital.html
@@ -49,7 +49,9 @@
                                     <option value="Karachi">Karachi</option>
                                     <option value="Lahore">Lahore</option>
                                     <option value="Islamabad">Islamabad</option>
-                                    <option value="other">Other</option>
+                                    <option value="Multan">Multan</option>
+                                    <option value="Faisalabad">Faisalabad</option>
+                                    <option value="Peshawar">Peshawar</option>
                                 </select>
 
                             </div>
