--- a/templates/recipient.html
+++ b/templates/recipient.html
@@ -69,10 +69,9 @@
                                 <select id="Category" name="Category" style="width: 175px;">
                                     <option value="Blood">Blood</option>
                                     <option value="Plasma">Plasma</option>
-                                    <option value="Plasma">RBC</option>
-                                    <option value="Plasma">WBC</option>
-                                    <option value="Plasma">Platelets</option>
-                                    <option value="other">Other</option>
+                                    <option value="RBC">RBC</option>
+                                    <option value="WBC">WBC</option>
+                                    <option value="Platelets">Platelets</option>
                                 </select>
 
                             </div>
@@ -99,7 +98,7 @@
                 </div>
                 <br><br>
                 <p style="margin: 1px; color: maroon; text-align: center;">{{error}}</p>
-                <input type="submit" value="Submit ">
+                <input type="submit" value="Search ">
 
             </form>
             
