--- a/templates/recipients_admin.html
+++ b/templates/recipients_admin.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<h1>Hello Admin! You are currently viewing all the recipient</h1>
+<h1>Hello Admin! You are currently viewing all the recipients</h1>
 {% endblock %}
 
 {% block body %}
