--- a/templates/base.html
+++ b/templates/base.html
@@ -272,6 +272,18 @@
             border-radius: 10px;
         }
 
+        input[type=datetime-local] {
+            padding-top: 4px;
+            padding-bottom: 4px;
+            border-radius: 10px;
+        }
+
+        input[type=number] {
+            padding-top: 4px;
+            padding-bottom: 4px;
+            border-radius: 10px;
+        }
+
         select {
             padding-top: 4px;
             padding-bottom: 4px;
